--- a/ios/Madrasa.xcodeproj/xcshareddata/xcschemes/Madrasa.xcscheme
+++ b/ios/Madrasa.xcodeproj/xcshareddata/xcschemes/Madrasa.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Madrase.app"
-               BlueprintName = "Madrase"
-               ReferencedContainer = "container:Madrase.xcodeproj">
+               BuildableName = "Madrasa.app"
+               BlueprintName = "Madrasa"
+               ReferencedContainer = "container:Madrasa.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MadraseTests.xctest"
-               BlueprintName = "MadraseTests"
-               ReferencedContainer = "container:Madrase.xcodeproj">
+               BuildableName = "MadrasaTests.xctest"
+               BlueprintName = "MadrasaTests"
+               ReferencedContainer = "container:Madrasa.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MadraseTests.xctest"
-               BlueprintName = "MadraseTests"
-               ReferencedContainer = "container:Madrase.xcodeproj">
+               BuildableName = "MadrasaTests.xctest"
+               BlueprintName = "MadrasaTests"
+               ReferencedContainer = "container:Madrasa.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Madrase.app"
-            BlueprintName = "Madrase"
-            ReferencedContainer = "container:Madrase.xcodeproj">
+            BuildableName = "Madrasa.app"
+            BlueprintName = "Madrasa"
+            ReferencedContainer = "container:Madrasa.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Madrase.app"
-            BlueprintName = "Madrase"
-            ReferencedContainer = "container:Madrase.xcodeproj">
+            BuildableName = "Madrasa.app"
+            BlueprintName = "Madrasa"
+            ReferencedContainer = "container:Madrasa.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Madrase.app"
-            BlueprintName = "Madrase"
-            ReferencedContainer = "container:Madrase.xcodeproj">
+            BuildableName = "Madrasa.app"
+            BlueprintName = "Madrasa"
+            ReferencedContainer = "container:Madrasa.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
