--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "lodash": "^4.5.0",
-    "react-native": "^0.18.1"
+    "react-native": "^0.18.1",
+    "react-timer-mixin": "^0.13.3"
   }
 }
